[package]
name = "figma-agent"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Local font helper for Figma, Linux and macOS"
repository = "https://github.com/sudosubin/figma-agent"

[[bin]]
name = "figma-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = [
    "cors",
    "compression-gzip",
    "compression-deflate",
    "compression-zstd",
    "set-header",
    "normalize-path",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ttf-parser = "0.25"
walkdir = "2"

axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
rcgen = { version = "0.13", optional = true }

[features]
default = ["tls"]
tls = ["dep:axum-server", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Profile used by `dist` when building release archives.
[profile.dist]
inherits = "release"
